airbyte-5050: Bumped connector version.